--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="author" content="" />
         <title>Prachanda Sharma Official</title>
         <!-- Favicon-->
+        <img src="brp.jpg.jpg" alt="Girl in a jacket">
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Font Awesome icons (free version)-->
