--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- home section -------------------------------------------------------->
     <section id="home" class="home">
         <div class="home-content scroll-scale">
-            <h1>Hi! I'm Prachanda Sharma</h1>
+            <h1>Hi! I'm Prachanda Sharma hagura</h1>
             <div class="change-text">
                 <h3>And I'm</h3>
                 <h3>
